[package]
name = "reddit-markdown"
version = "1.13.0"
edition = "2021"
authors = ["Reddit Markdown Contributors"]
description = "A Rust tool to save Reddit posts as Markdown or HTML files"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
regex = "1.10"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
csv = "1.3"
rand = "0.8"
dirs = "5.0"
pulldown-cmark = "0.11"
base64 = "0.22"
html-escape = "0.2"
indicatif = "0.17"

[[bin]]
name = "reddit-markdown"
path = "src/main.rs"

[dev-dependencies]
mockito = "1.4"
tempfile = "3.10"
serde_json = "1.0"